# cpp-carworld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
out_data/: ratios_v3_100zones_0-to-414.txt  scores_v3S_0-to-414.csv  scores_v3S_0_to_149.csv  scores_v3S_150_to_249.csv  scores_v3S_241_to_414.csv  scores_v3_0-to-160.csv  scores_v3_0-to-414.csv  scores_v3_100zones_0-to-414.csv  scores_v3_161-to-373.csv  scores_v3_370_to_418.csv
res/brains/: 1180.gen  200.gen  263.gen  50.gen  no_death.gen  v0.1-every50.gen  v01-100between-1000.gen  v3.1_321.brains  v3.1_81.brains  v3.1_with_changes_660.brains  v3S_150_temp.brains  v3S_161.brains  v3S_241.brains  v3S_401.brains  v3S_415.brains  v3_100zones_11.brains  v3_100zones_111.brains  v3_100zones_151.brains  v3_100zones_231.brains  v3_100zones_31.brains  v3_100zones_311.brains  v3_100zones_391.brains  v3_100zones_415.brains  v3_100zones_43.brains  v3_100zones_51.brains  v3_100zones_74.brains  v3_100zones_81.brains  v3_161.brains  v3_321.brains  v3_370.brains  v3_415.brains  v3_final_85.brains
res/config/: 0.txt  0_manual_routes.txt  1000.txt  11.txt  111.txt  1180.txt  120.txt  151.txt  161.txt  200.txt  231.txt  241.txt  276.txt  30.txt  30_old.txt  31.txt  311.txt  321.txt  391.txt  400.txt  401.txt  415.txt  43.txt  50.txt  500.txt  51.txt  75_old.txt  77_old.txt  81.txt  clean_0.txt  midtbyen_0.txt
res/maps/: 4way.map  circuit.map  figure8.map  line.map  midtbyen_oneways.txt  roundabout4.txt
res/models/: intersection.glb  pathnode.glb  road.glb  roadOneWay.glb  skybox.glb
res/shaders/: base.vs  carZones.fs  grid.fs  model.fs
src/: CameraController.cpp  GeneticSimulation.cpp  GeneticSimulation.h  Simulation.cpp  Simulation.h  UserController.cpp  UserController.h  Window.cpp  Window.h  World.cpp  World.h  carConfig.h  carMath.cpp  carMath.h  main.cpp  util.cpp  util.h
src/driving/: CarBrain.cpp  CarBrain.h  CarMatrix.cpp  CarMatrix.h  RandomRoutesPicker.cpp  RandomRoutesPicker.h  Route.cpp  Route.h  RouteFollower.cpp  RouteFollower.h
src/entities/: AsphaltMesh.cpp  AsphaltMesh.h  Car.cpp  Car.h  Edge.cpp  Edge.h  FloorGrid.cpp  FloorGrid.h  LineSegment.cpp  LineSegment.h  ModelRenderer.cpp  ModelRenderer.h  Node.cpp  Node.h  Path.cpp  Path.h  (+3 more)
(+32 files in other folders)
